--- a/styles/contact.css
+++ b/styles/contact.css
@@ -26,6 +26,7 @@
 
 /* Title */
 .contact-left-title h2 {
+  font-family: var(--secondary-font);
   font-size: 3rem;
   font-weight: 600;
   margin-bottom: 0.4rem;
@@ -37,10 +38,9 @@
 
 .contact-left-title hr {
   width: 5rem;
-  height: 0.3rem;
+  height: 0.35rem;
   border: none;
   background: var(--accent-colour);
-  border-radius: 1rem;
 }
 
 /* Inputs */
@@ -70,8 +70,8 @@ textarea.contact-inputs {
 
 /* Submit Button */
 button[type="submit"] {
-  width: 50%;
-  padding: 1.6rem;
+  width: fit-content;
+  padding: 1.6rem 2rem;
   font-size: 1.6rem;
   background-color: var(--accent-colour);
   color: #fff;
