--- a/styles/styles.css
+++ b/styles/styles.css
@@ -176,3 +176,7 @@ footer{
     background-color: #333d47;
     color: var(--background-colour);
 }
+
+h1{
+    font-family: var(--secondary-font);
+}
